estilização dos atributos do pokemon

--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
         <hr>
     </header>
     <div class="container">
-        
         <div id="miniGame">
+            <div id="atributos">
+                <!-- <ul class="listaAtributos">
+                    <li>Nome</li>
+                    <li>level</li>
+                    <li>nivel felicidade</li>
+                </ul> -->
+            </div>
             <div id="pokemonInicial">
             </div>
             <div id="botoesAcao">
@@ -30,6 +36,10 @@
             </div>
         </div>
     </div>
+
+    <!-- <div class="containerPop-up">
+        <div class="pop-up">asdsa</div>
+    </div> -->
     <script src="script.js"></script>
 </body>
 </html>
