Funções de atualização de status criados

--- a/index.html
+++ b/index.html
@@ -20,16 +20,12 @@
     <div class="container">
         <div id="miniGame">
             <div id="atributos">
-                <!-- <ul class="listaAtributos">
-                    <li>Nome</li>
-                    <li>level</li>
-                    <li>nivel felicidade</li>
-                </ul> -->
+                
             </div>
             <div id="pokemonInicial">
             </div>
             <div id="botoesAcao">
-                <button class="botao" id="pikachu" onclick="pokemonSelecionado('pikachu')">Pikachu</button>
+                <button class="botao" id="pikachu" onclick="pokemonSelecionado('Pikachu')">Pikachu</button>
                 <button class="botao" id="bulbasaur" onclick="pokemonSelecionado('Bulbassauro')">Bulbassauro</button>
                 <button class="botao" id="Charmander" onclick="pokemonSelecionado('Charmander')">Charmander</button>
                 <button class="botao" id="Squirtle" onclick="pokemonSelecionado('Squirtle')">Squirtle</button>
