--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav class="navbar">
             <div class="logo">
                 <a href=""><img src="src/fundoDeTela/Pokebolapng.png" alt="pokebola" id="pokeBolaLogo"></a>
+                <span id="pokeJsonLogo">PokeJSON</span>
             </div>
             <p><a href="">Sobre o projeto</a></p>
         </nav>
@@ -20,7 +21,7 @@
     <div class="container">
         <div id="miniGame">
             <div id="atributos">
-                
+                Escolha o seu pokemon inicial
             </div>
             <div id="pokemonInicial">
             </div>
